# fourier-challenge-0

./: README.md
common/: Cargo.toml
common/src/: command.rs  lib.rs
common/src/command/: pump.rs  temperature.rs
common/src/types/: pump.rs  temperature.rs
dummy/: Cargo.toml
dummy/src/: main.rs
main/: Cargo.toml  build.rs
main/.cargo/: config.toml
main/src/: main.rs  model.rs
main/src/command/: pump.rs  temperature.rs
main/src/peripherals/: pump.rs  temperature.rs
