[package]
name = "main"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "stm32g4xx-hal/defmt",
    "cookie-cutter/defmt",
    "embedded-command/defmt",
    "heapless/defmt-03",
    "common/defmt",
]

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", optional = true }
rtic = { git = "https://github.com/rtic-rs/rtic", rev = "1a1237690cf676733579ffde0f507a00950e474e", features = [
    "thumbv7-backend",
] }
rtic-common = { git = "https://github.com/rtic-rs/rtic", rev = "1a1237690cf676733579ffde0f507a00950e474e" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", rev = "1a1237690cf676733579ffde0f507a00950e474e", features = [
    "stm32-metapac",
    "stm32g431rb",
    "stm32_tim2",
] }
rtic-sync = { git = "https://github.com/rtic-rs/rtic", rev = "1a1237690cf676733579ffde0f507a00950e474e" }
stm32g4xx-hal = { git = "https://github.com/adinack/stm32g4xx-hal", features = [
    "stm32g431",
] }
# stm32g4xx-hal = { path = "/Users/adinack/Projects/stm32g4xx-hal", features = [
#     "stm32g431",
# ] }
cookie-cutter = { git = "https://github.com/adinack/embedded-command" }
dispatch-bundle = { git = "https://github.com/adinack/embedded-command" }
embedded-command = { git = "https://github.com/adinack/embedded-command" }
heapless = "0.8.0"
futures = { version = "0.3.31", default-features = false }
common = { path = "../common" }

[[bin]]
name = "main"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = 3
incremental = true
codegen-units = 1
